# Lumos-Engine

./: README.md  meson.build
Examples/: primitive.cpp  scratch.cpp
Lumos/: lumos.cpp  shader.cpp  shapes.cpp  text.cpp
assets/shaders/: vert.glsl
examples/: batch_render.cpp  moving_rect.cpp  openal_test.cpp  sand_sim.cpp  texture.cpp
include/: audio.hpp  batch_renderer.hpp  camera.h  lumos.h  shader.h  shapes.h  textures.h
src/: audio.cpp  batch_renderer.cpp  camera.cpp  ecs.cpp  gl_stuff.cpp  lumos.cpp  shader.cpp  shapes.cpp  textures.cpp
